--- a/AlloyTechAzure/EPiServerFramework.config
+++ b/AlloyTechAzure/EPiServerFramework.config
@@ -34,4 +34,9 @@
     </providers>
   </event>
   <appData basePath="..\AppData" />
+  <localization fallbackBehavior="Echo, MissingMessage, FallbackCulture" fallbackCulture="en">
+    <providers>
+      <add virtualPath="~/Resources/LanguageFiles" name="languageFiles" type="EPiServer.Framework.Localization.XmlResources.FileXmlLocalizationProvider, EPiServer.Framework" />
+    </providers>
+  </localization>
 </episerver.framework>
